<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/CannyEdges">

        <EditTextPreference
            app:key="canny_thres_1"
            app:title="Threshold 1"
            app:defaultValue="40"
            app:useSimpleSummaryProvider="true" />


        <EditTextPreference
            app:key="canny_thres_2"
            app:title="Threshold 2"
            app:defaultValue="100"
            app:useSimpleSummaryProvider="true" />

        <!--
        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />
            -->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/HoughLine">

        <EditTextPreference
            app:key="houghline_thres"
            app:title="Threshold"
            app:defaultValue="200"
            app:useSimpleSummaryProvider="true" />


        <EditTextPreference
        app:key="houghline_minlinelength"
        app:title="Min Line Length"
        app:defaultValue="300"
        app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="houghline_maxlinegap"
            app:title="Max Line Gap"
            app:defaultValue="500"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/binary">


        <EditTextPreference
            app:key="binary_thres"
            app:title="Threshold"
            app:defaultValue="120"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>


    <!--
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    -->

</PreferenceScreen>
